# deep-research-mcp

./: .env.example  .gitignore  LICENSE  README.md  deep_research_mcp.py  pyproject.toml
deep_research_runtime/: __init__.py  citation_grounding.py  cli.py  conflict_detector.py  graph.py  knowledge_cache.py  langsmith_utils.py  maintenance.py  models.py  quality.py  query_reform.py  recency.py  retry.py  runtime.py  search_service.py  service.py  settings.py  storage.py  tools.py  worker.py
deep_research_runtime/agents/: __init__.py  base.py  planner.py  researcher.py  reviewer.py  writer.py
docs/: INTERVIEW_QA.md  PROJECT_DOCUMENTATION.md  RESUME_INTERVIEW_GUIDE.md
tests/: conftest.py
tests/unit/: test_citation_grounding.py  test_conflict_detector.py  test_input_validation.py  test_knowledge_cache.py  test_maintenance.py  test_query_reform.py  test_recency.py  test_retry.py  test_search_breaker.py  test_settings.py  test_storage.py  test_writer_conflicts.py
