# ──────────────────────────────────────────────────────────────────────
# Deep Research MCP Server — packaging metadata
#
# Install in development mode:
#     pip install -e .
#
# After install, the following commands are available:
#     deep-research-mcp           # start the MCP server (stdio)
#     deep-research-mcp init      # interactive setup wizard
#     deep-research-mcp doctor    # non-destructive config check
# ──────────────────────────────────────────────────────────────────────

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deep-research-mcp"
version = "0.2.0"
description = "Autonomous deep research engine exposed as an MCP (Model Context Protocol) server."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Deep Research Contributors" }]
keywords = ["mcp", "research", "llm", "langgraph", "agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Core runtime dependencies. Pinned to compatible ranges to keep installs
# reproducible without hard-locking patch versions.
dependencies = [
    # MCP server framework
    "mcp>=1.2.0",

    # Workflow orchestration
    "langgraph>=0.2.40",
    "langgraph-checkpoint-sqlite>=2.0.1",
    "langsmith>=0.1.140",

    # LLM provider abstraction
    "litellm>=1.50.0",

    # HTTP clients
    "aiohttp>=3.9",
    "httpx>=0.27",

    # Storage / async db
    "aiosqlite>=0.20",

    # HTML / content extraction
    "lxml>=5.0",
    "readability-lxml>=0.8.1",
]

[project.optional-dependencies]
# Local embedder / reranker. Optional because some deployments only want the
# pure-LLM pipeline without the worker subprocess.
local-models = [
    "sentence-transformers>=3.0",
    "torch>=2.2",
]

# Fallback search & extra document parsing.
extras = [
    "ddgs>=6.0",          # DuckDuckGo fallback
    "pymupdf>=1.24",      # PDF extraction
]

# Developer tooling.
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.5",
    "pre-commit>=3.6",
    "detect-secrets>=1.5",
]

[project.scripts]
# Single entry point — subcommands dispatched inside deep_research_runtime.cli.
deep-research-mcp = "deep_research_mcp:main"

[project.urls]
Homepage = "https://github.com/studyzhige-ui/deep-research-mcp"
Issues = "https://github.com/studyzhige-ui/deep-research-mcp/issues"

# ──────────────────────────────────────────────────────────────────────
# setuptools: explicitly list packages because we have both a top-level
# module (deep_research_mcp.py) and a package (deep_research_runtime/).
# ──────────────────────────────────────────────────────────────────────

[tool.setuptools]
py-modules = ["deep_research_mcp"]

[tool.setuptools.packages.find]
include = ["deep_research_runtime*"]
exclude = ["tests*", "docs*"]

# ──────────────────────────────────────────────────────────────────────
# Tooling configuration
# ──────────────────────────────────────────────────────────────────────

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "PL"]
ignore = [
    "E501",   # line too long — covered by formatter
    "PLR0913", # too many arguments — common in agent constructors
    "PLR2004", # magic values — fine in tests / probe code
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"
